页面跳转优化

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,6 +33,6 @@
 <p>This is a secret space fot test.</p>
 
 <a href="/view/welcome.html">welcome to the space!</a>
-<a href="/vidSpace">go to the vid space</a>
+<a href="/view/vidSpace">go to the vid space</a>
 </body>
 </html>
